api_cuantica_local/k8s_infra/02-ingress-nativo.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-cuantica-gateway-ingress
  namespace: default
spec:
  rules:
  - http:
      paths:
      - path: /api/v1/quantum/procesar
        pathType: Prefix
        backend:
          service:
            name: api-cuantica-service
            port:
              number: 5000
