api_cuantica_local/k8s_infra/03-ingress-apisix.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: q-immune-mesh-ingress
  namespace: default
  annotations:
    # Buenas prácticas APIM: Obligamos a Apache APISIX a leer y gobernar este Ingress
    kubernetes.io/ingress.class: "apisix"
spec:
  ingressClassName: apisix
  rules:
  - http:
      paths:
      - path: /api/v1/mesh/quantum/procesar
        pathType: Prefix
        backend:
          service:
            name: q-immune-mesh-service
            port:
              number: 5000
      - path: /api/v1/mesh/auth/keygen
        pathType: Prefix
        backend:
          service:
            name: q-immune-mesh-service
            port:
              number: 5000
