api_cuantica_local/k8s_infra/03-ingress-nativo.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: q-immune-mesh-ingress-nativo
  namespace: default
spec:
  rules:
  - http:
      paths:
      - path: /api/v1/mesh/auth/keygen
        pathType: Prefix
        backend:
          service:
            name: q-immune-mesh-service
            port:
              number: 5000
      - path: /api/v1/mesh/quantum/procesar
        pathType: Prefix
        backend:
          service:
            name: q-immune-mesh-service
            port:
              number: 5000
